# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.173 2009/03/06 08:11:17 keri Exp $

  06 Mar 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.7.ebuild:
  Fix stream encoding in rdf_write_xml/2

  06 Mar 2009; <keri@gentoo.org> swi-prolog-5.7.7.ebuild:
  Remove redundant arguments to econf

  28 Feb 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild:
  Support gmp-allocation checks and thread resource exceptions

  28 Feb 2009; <keri@gentoo.org> swi-prolog-5.6.62.ebuild,
  swi-prolog-5.6.63.ebuild, swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.6.ebuild:
  Update SRC_URI

  28 Feb 2009; <keri@gentoo.org> -swi-prolog-5.7.1.ebuild,
  -swi-prolog-5.7.2.ebuild, -swi-prolog-5.7.3.ebuild,
  -swi-prolog-5.7.4.ebuild, -swi-prolog-5.7.5.ebuild:
  Remove old -5.7 development versions

*swi-prolog-5.7.7 (28 Feb 2009)

  28 Feb 2009; <keri@gentoo.org> +swi-prolog-5.7.7.ebuild:
  Bump -5.7 development version

*swi-prolog-5.7.6 (21 Feb 2009)

  21 Feb 2009; <keri@gentoo.org> +swi-prolog-5.7.6.ebuild:
  Bump -5.7 development version

*swi-prolog-5.7.5 (24 Jan 2009)

  24 Jan 2009; <keri@gentoo.org> +swi-prolog-5.7.5.ebuild:
  Bump -5.7 development version

*swi-prolog-5.6.64 (24 Jan 2009)

  24 Jan 2009; <keri@gentoo.org> +swi-prolog-5.6.64.ebuild:
  Version bump.

*swi-prolog-5.7.4 (08 Jan 2009)

  08 Jan 2009; <keri@gentoo.org> +swi-prolog-5.7.4.ebuild:
  Bump -5.7 development version

  09 Dec 2008; <keri@gentoo.org> -swi-prolog-5.6.49.ebuild,
  -swi-prolog-5.6.50.ebuild, -swi-prolog-5.6.51.ebuild,
  -swi-prolog-5.6.52.ebuild, -swi-prolog-5.6.54.ebuild,
  -swi-prolog-5.6.55.ebuild, -swi-prolog-5.6.57.ebuild,
  -swi-prolog-5.6.58.ebuild, -swi-prolog-5.6.59.ebuild,
  -swi-prolog-5.6.60.ebuild, -swi-prolog-5.6.61.ebuild:
  Remove old versions.

  08 Dec 2008; Raúl Porcel <armin76@gentoo.org> swi-prolog-5.6.62.ebuild: