@@ -1,8 +1,11 @@
 DIST pl-5.7.6.tar.gz 12118598 RMD160 b9a46e9f17da0796db6b820c0e8a7079fed22842 SHA1 8a36fa6a20ccd9c27400e4eb50a1bd8b47b27b47 SHA256 455354e9908a2fa6ce658e2560ecf5e504d77d0e130c841b04b9b439b8f5272c
 DIST pl-5.7.7.tar.gz 12358491 RMD160 0061863a26e13b1135c904789211cfacb4321318 SHA1 1d547796745f60941fc7f886d19172557772927c SHA256 70f771d3c4deaccae0854fa41f9dfc2f946a6e6741d398810b2f4867e8d93194
+DIST pl-5.7.8.tar.gz 12364412 RMD160 c83d330a45196868ed401898329e725bf1b0edf1 SHA1 e0c4bee186f78104286e55fc2f28a47fb6dc60f0 SHA256 1b4bbc77cd7a9e9c1bdf79307122a565246d4858305696cd5557b471b5c349f5
 DIST swi-prolog-5.7.6-gentoo-patchset-0.tar.gz 5247 RMD160 e3727a37a1a66338e215c2e79c093f3bfe294cd9 SHA1 fb63a9a7d57ff422884ddf0bfb100cb7c6403c3c SHA256 9ee5e61fd79e19460d3aeea78b06e65957b7a8265a0d57d905965d723a7c9852
 DIST swi-prolog-5.7.7-gentoo-patchset-1.tar.gz 5376 RMD160 765ac23454838ea9115251d07a7c9b4eb9a39f1a SHA1 135a630f80b26ae31fd50e8f8e271859cbfc39f0 SHA256 4b613f1ec2229abfbd0d50006f5cf712f52b6ff2b7a5fcf3bf8a5dbeb1c61f6a
+DIST swi-prolog-5.7.8-gentoo-patchset-0.tar.gz 4989 RMD160 b3501af79109efe3b9f69b51df39add013055031 SHA1 fd2a48ac2adb30760a619b8be643fbe2f924fcf5 SHA256 933eff784cc38f5fb360464899ab078f0252141171c47ae6dca0ffffba75cc62
 EBUILD swi-prolog-5.7.6.ebuild 3329 RMD160 6ccb52b0c7530b6cff7a4ecafad5da72ad84f409 SHA1 8e3f5b616b0b079ce4618c8cabaa857ed3a24a51 SHA256 60effc59cac80c32f889839ff5cdd133f60ce4529c431f18142543117e8a4760
 EBUILD swi-prolog-5.7.7.ebuild 3281 RMD160 0c1557d378a0fd30f0da6099be570b452963507c SHA1 8af728b58b9b60fab86ba42f531285d67b50acc2 SHA256 df3c987ddb2b1ebdc5df4cc3718a5abcb0a0cb21b34007de39c880f32b9de836
-MISC ChangeLog 29246 RMD160 9e499ed23724b87f3ee508ca12020d215b36ff4c SHA1 e2006ed475933b4b5a241a6b80dd842f4614626f SHA256 5debe24078ca36a1ecd48ec86f5547d036fbe7d62d7baaf48bbf3505a1d0417f
+EBUILD swi-prolog-5.7.8.ebuild 3281 RMD160 3ca9aaad31aa1ec5d27c275dac31d75925ef2105 SHA1 84be2b2144b5ac7216813a03dc35646450f3ee8a SHA256 a777fa79300d338fc26d4d26e019440fb90aa477035077a8d3691879df7c2e77
+MISC ChangeLog 29371 RMD160 d744d41dc56a208fcb7ecf76246a10c157c1a380 SHA1 a4a716b585c05972c5d03b56d72699a25d6c63f2 SHA256 66a9bbfaa2a78e688e90993133fa2ff568cef3af60a0fc22390624346888beec
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
