@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.173 2009/03/06 08:11:17 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.174 2009/03/14 08:09:30 keri Exp $
+
+*swi-prolog-5.7.8 (14 Mar 2009)
+
+  14 Mar 2009; <keri@gentoo.org> +swi-prolog-5.7.8.ebuild:
+  Bump -5.7 development version
 
   06 Mar 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
   swi-prolog-5.7.7.ebuild:
